--- a/flightplan.html
+++ b/flightplan.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark" >
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,60 +7,51 @@
     <script type="importmap">
         {"imports": {"vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js"}}
     </script>
-    <!-- Bootstrap 5.3 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/flightplan.css">
     <script type="module" src="./Apps/FlightPlan.js"></script>
 </head>
 <body>
-<div  class="full-page" id="app">
-<!-- Top Bar -->
-<nav class="navbar navbar-expand-lg navbar-light ">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Day Planner</a>
-        <div class="d-flex flex-grow-1 justify-content-between">
-            <!-- Info Slots -->
-            <div class="d-flex flex-wrap justify-content-around w-50">
-                <div class="info-slot">Info 1</div>
-                <div class="info-slot">Info 2</div>
-                <div class="info-slot">Info 3</div>
-                <div class="info-slot">Info 4</div>
-                <div class="info-slot">Info 5</div>
-                <div class="info-slot">Info 6</div>
+<div class="full-page" id="app">
+    <nav class="navbar navbar-expand-lg navbar-light">
+
+        <div class="d-flex flex-fill flex-wrap justify-content-start w-100">
+            <div class="info-slot p-3">
+
+                <a class="navbar-brand" href="#">FlightPlan</a>
             </div>
-            <!-- Clock -->
-            <div class="clock d-flex align-items-center">
+            <div class="info-slot">I1</div>
+            <div class="info-slot">I2</div>
+            <div class="info-slot">I3</div>
+            <div class="info-slot">I4</div>
+            <div class="info-slot">I5</div>
+            <div class="info-slot">I6</div>
+            <div class="info-slot">I7</div>
+            <div class="info-slot clock">
                 <span id="current-time"></span>
             </div>
         </div>
-    </div>
-</nav>
 
-<!-- Main Content -->
-<div class="container-fluid main-container">
-    <div class="row ">
-        <!-- Task List Column -->
-        <div class="col-md-2 p-0">
-            <fpcardlist :objects="objects"></fpcardlist>
-        </div>
 
-        <!-- Radar View Column -->
-        <div class="col-md-8 p-0">
-            <fpradar :width="800" :height="700" :objects="objects"></fpradar>
-        </div>
+    </nav>
 
-        <!-- Unused Space Column -->
-        <div class="col-md-2 p-0">
-            <div class="unused-bar">
-                <!-- This section can be used for future content -->
-                <p class="text-center mt-4">Unused Space</p>
+    <div class="container-fluid main-container">
+        <div class="row ">
+            <div class="col-md-2 p-0 " style="    border-right: 1px solid #adc9d7" >
+                <fpcardlist :objects="objects"></fpcardlist>
+            </div>
+            <div class="col-md-7 p-0" style="    border-right: 1px solid #adc9d7">
+                <fpradar :width="1000" :height="850" :objects="objects"></fpradar>
+            </div>
+            <div class="col-md-3 p-0">
+                <div class="unused-bar">
+                    <p class="text-center mt-4">Unused Space</p>
+                </div>
             </div>
         </div>
     </div>
 </div>
-</div>
 
-<!-- Bootstrap 5.3 JS and Dependencies -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 
