--- a/flightplan.html
+++ b/flightplan.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--suppress ALL -->
 <html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
@@ -9,6 +10,8 @@
     </script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/flightplan.css">
+    <link rel="stylesheet" href="./assets/css/flightplan-colors.css">
+
     <script type="module" src="./Apps/FlightPlan.js"></script>
 </head>
 <body>
@@ -20,28 +23,26 @@
 
                 <a class="navbar-brand" href="#">FlightPlan</a>
             </div>
-            <div class="info-slot">I1</div>
-            <div class="info-slot">I2</div>
-            <div class="info-slot">I3</div>
-            <div class="info-slot">I4</div>
-            <div class="info-slot">I5</div>
-            <div class="info-slot">I6</div>
-            <div class="info-slot">I7</div>
+            <div class="info-slot"><span class="fp-label">I1</span></div>
+            <div class="info-slot"><span class="fp-label">I2</span></div>
+            <div class="info-slot"><span class="fp-label">I3</span></div>
+            <div class="info-slot"><span class="fp-label">I4</span></div>
+            <div class="info-slot"><span class="fp-label">I5</span></div>
+            <div class="info-slot"><span class="fp-label">I6</span></div>
+            <div class="info-slot"><span class="fp-label">I7</span></div>
             <div class="info-slot clock">
                 <span id="current-time"></span>
             </div>
         </div>
-
-
     </nav>
 
     <div class="container-fluid main-container">
-        <div class="row ">
-            <div class="col-md-2 p-0 " style="    border-right: 1px solid #adc9d7" >
+        <div class="row main-container">
+            <div class="col-md-2 p-0 " style="    border-right: 1px solid #adc9d7">
                 <fpcardlist :objects="objects"></fpcardlist>
             </div>
             <div class="col-md-7 p-0" style="    border-right: 1px solid #adc9d7">
-                <fpradar :width="1000" :height="850" :objects="objects"></fpradar>
+                <fpradar :width="700" :height="600" :objects="objects"></fpradar>
             </div>
             <div class="col-md-3 p-0">
                 <div class="unused-bar">
