Fixed some scaling

--- a/flightplan.html
+++ b/flightplan.html
@@ -41,7 +41,7 @@
             <div class="col-md-2 p-0 " style="    border-right: 1px solid #adc9d7">
                 <fpcardlist :objects="objects"></fpcardlist>
             </div>
-            <div class="col-md-7 p-0" style="    border-right: 1px solid #adc9d7">
+            <div id="fp-radar-viewport" class="col-md-7 p-0" style="    border-right: 1px solid #adc9d7">
                 <fpradar :width="700" :height="600" :objects="objects"></fpradar>
             </div>
             <div class="col-md-3 p-0">
