--- a/flightplan.html
+++ b/flightplan.html
@@ -38,10 +38,10 @@
 
     <div class="container-fluid main-container">
         <div class="row main-container">
-            <div class="col-md-2 p-0 " style="    border-right: 1px solid #adc9d7">
+            <div class="col-md-2 p-0 " style="    border-right: 1px solid #134970FF">
                 <fpcardlist :objects="objects"></fpcardlist>
             </div>
-            <div id="fp-radar-viewport" class="col-md-7 p-0 overflow-hidden" style=" border-right: 1px solid #adc9d7">
+            <div id="fp-radar-viewport" class="col-md-7 p-0 overflow-hidden" style=" border-right: 1px solid #134970FF">
                 <fpradar :width="700" :height="600" :objects="objects"></fpradar>
             </div>
             <div class="col-md-3 p-0">
