--- a/flightplan.html
+++ b/flightplan.html
@@ -11,8 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/flightplan.css">
     <link rel="stylesheet" href="./assets/css/flightplan-colors.css">
-
-    <script type="module" src="./Apps/FlightPlan.js"></script>
+    <script type="module" src="./FlightPlan.js"></script>
 </head>
 <body>
 <div class="full-page" id="app">
