--- a/flightplan.html
+++ b/flightplan.html
@@ -11,6 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/flightplan.css">
     <link rel="stylesheet" href="./assets/css/flightplan-colors.css">
+
+<link rel="stylesheet" href="./assets/fonts/fa-pro-sharp-regular/css/all.css">
     <script type="module" src="./FlightPlan.js"></script>
 </head>
 <body>
@@ -38,10 +40,10 @@
     <div class="container-fluid main-container">
         <div class="row main-container">
             <div class="col-md-2 p-0 " style=" border-right: 1px solid #134970FF">
-                <fpcardlist :objects="objects"></fpcardlist>
+                <component :is="'fpcardlist'" :waypoints="waypoints"></component>
             </div>
             <div id="fp-radar-viewport" class="col-md-7 p-0 overflow-hidden" style=" border-right: 1px solid #134970FF">
-                <fpradar :width="700" :height="600" :objects="objects"></fpradar>
+                <component :is="'fpradar'" :width="700" :height="600" :waypoints="waypoints"></component>
             </div>
             <div class="col-md-3 p-0">
                 <div class="unused-bar">
