--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   </head>
   <body>
     <div class="full-page"  id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
