--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+      <script type="importmap">
+          {
+            "imports": {
+              "vue": "https://unpkg.com/vue@2.6.0/dist/vue.esm.browser.min.js"
+            }
+          }
+      </script>
+
       <!-- MSAL - Microsoft Auth   -->
 
       <!-- Styling -->
